# c-build-tools-example

./: .gitignore  README.md
using-autotools/: .gitignore  Makefile.am  README.md  configure.ac  libtool
using-autotools/include/: config.h  whois.h
using-autotools/src/: Makefile.am
using-cmake/: CMakeLists.txt  README.md
using-cmake/src/: CMakeLists.txt
using-make/: Makefile  README.md
using-make/src/: whois.c  whoisclient.c  whoisserver.c
